# ESP32_eink

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
main/app/: cmd_epd2in9.h  eInkDisplay.cpp  eInkDisplay.h  eInkDisplay2in9.cpp  eInkDisplay2in9.h  eInkDisplayBase.cpp  eInkDisplayBase.h  epd_image.cpp  epd_image.h  gui_paint.cpp  gui_paint.h
main/app/Fonts/: font12.c  font16.c  font20.c  font24.c  font8.c  fonts.h
main/hw_interface/: gpio_pin.cpp  gpio_pin.h  spi_manager.cpp  spi_manager.h
